# keep

./: .dockerignore  .env.example  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.reproducible  Justfile  LICENSE  README.md  REUSE.toml  SECURITY.md  book.toml  deny.toml  justfile
.cargo/: config.toml
.github/: dependabot.yml
.security-review/: warden-policy-integration-2026-01-31.md
.well-known/: security.txt
contrib/: Dockerfile  (+6 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_frost_messages/: seed_announce.json  seed_error.json  seed_sign_request.json
fuzz/corpus/fuzz_npub/: seed_prefix
fuzz/corpus/fuzz_nsec/: seed_prefix
fuzz/corpus/fuzz_share_export/: seed_bech32_prefix  seed_valid.json
fuzz/fuzz_targets/: fuzz_encrypted_data.rs  fuzz_frost_messages.rs  fuzz_npub.rs  fuzz_nsec.rs  fuzz_share_export.rs  fuzz_tpm_quote.rs  fuzz_vault_header.rs
keep-agent/: Cargo.toml
keep-agent-py/: Cargo.toml  README.md  pyproject.toml
keep-agent-py/python/keep_agent/: __init__.py  crewai.py  exceptions.py  langchain.py
keep-agent-py/src/: lib.rs
keep-agent-ts/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
keep-agent-ts/lib/: index.d.ts  index.js  index.ts
keep-agent-ts/src/: lib.rs
keep-agent/src/: attestation.rs  client.rs  entropy.rs  error.rs  frost.rs  lib.rs  manager.rs  rate_limit.rs  scope.rs  session.rs
keep-agent/src/mcp/: mod.rs  server.rs  tools.rs
keep-bitcoin/: Cargo.toml
keep-bitcoin/src/: address.rs  chain_view.rs  descriptor.rs  error.rs  frost_bip32.rs  key_proof.rs  lib.rs  psbt.rs  recovery.rs  recovery_tx.rs  signer.rs
keep-cli/: Cargo.toml
keep-cli/contrib/: config.toml.example
keep-cli/src/: bunker.rs  cli.rs  config.rs  ipc.rs  main.rs  output.rs  panic.rs  panic_windows.rs  server.rs  tui.rs  warden.rs
keep-cli/src/commands/: agent.rs  audit.rs  bitcoin.rs  enclave.rs  frost.rs  frost_hardware.rs  frost_network.rs  migrate.rs  mod.rs  nip46.rs  secret.rs  serve.rs  vault.rs  wallet.rs
keep-cli/src/commands/frost_network/: attestation.rs  dkg.rs  duress.rs  hardware.rs  mod.rs
keep-cli/src/signer/: audit.rs  frost_signer.rs  handler.rs  hardware.rs  mod.rs  nonce_store.rs  permissions.rs
keep-cli/tests/: cli_integration.rs
keep-core/: Cargo.toml
keep-core/benches/: crypto.rs
keep-core/src/: audit.rs  backend.rs  backup.rs  crypto.rs  descriptor.rs  display.rs  entropy.rs  error.rs  frost_bip32.rs  keyring.rs  keys.rs  lib.rs  migration.rs  mnemonic.rs  nip06.rs  oprf.rs  rate_limit.rs  relay.rs  rotation.rs  secret.rs  storage.rs  util.rs  vault.rs  wallet.rs
keep-core/src/frost/: bip32_signing.rs  coordinator.rs  dealer.rs  dkg.rs  mod.rs  recover.rs  refresh.rs  share.rs  signing.rs  transport.rs
keep-core/src/frost/ed25519/: dealer.rs  minisign.rs  mod.rs  signer.rs
keep-core/src/hidden/: header.rs  mod.rs  volume.rs
keep-core/tests/: integration_tests.rs  property_tests.rs  recover_tests.rs
keep-desktop/: Cargo.toml
keep-desktop/src/: app.rs  bunker_service.rs  frost.rs  local_signer_service.rs  main.rs  message.rs  nostrconnect.rs  theme.rs  tray.rs
keep-desktop/src/app/: audit.rs  backup.rs  config.rs  helpers.rs  identity.rs  mod.rs  navigation.rs  relay.rs  settings.rs  shares.rs  util.rs  wallet.rs
keep-desktop/src/screen/: bunker.rs  create.rs  distribute.rs  export.rs  export_ncryptsec.rs  import.rs  layout.rs  local_signer.rs  mod.rs  nsec_keys.rs  recovery.rs  relay.rs  relays.rs  scanner.rs  settings.rs  shares.rs  signing_audit.rs  unlock.rs  wallet.rs
keep-desktop/tests/: scanner_test.rs
keep-enclave/enclave/: Cargo.toml
keep-enclave/enclave/src/: audit.rs  aws_credentials.rs  error.rs  kms.rs  kmstool.rs  main.rs  mlock.rs  policy.rs  rate_limit.rs  signer.rs  vsock_server.rs
keep-enclave/host/: Cargo.toml
keep-enclave/host/src/: attestation.rs  backend.rs  client.rs  error.rs  kms.rs  lib.rs  mock.rs  protocol.rs
keep-enclave/host/tests/: integration_tests.rs
keep-frost-net/: Cargo.toml  DESCRIPTOR_COORDINATION.md
keep-frost-net/src/: announce_attestor.rs  attestation.rs  audit.rs  cert_pin.rs  descriptor_session.rs  descriptor_session_store.rs  ecdh.rs  enroll_session.rs  error.rs  event.rs  lib.rs  node.rs  nonce_pool.rs  nonce_store.rs  oprf_session.rs  peer.rs  pinning.rs  proof.rs  protocol.rs  psbt_session.rs  recovery_signers.rs  session.rs  state_event.rs  structured_payload.rs  test_support.rs  tpm_policy.rs  tpm_producer.rs  tpm_quote.rs
keep-frost-net/src/node/: descriptor.rs  ecdh.rs  enroll.rs  mod.rs  oprf.rs  psbt.rs  signing.rs  transport.rs
keep-frost-net/tests/: cert_pins_file_test.rs  derivation_path_signing_memory_test.rs  descriptor_memory_test.rs  ecdh_memory_test.rs  enroll_memory_test.rs  failover_memory_test.rs  health_check_memory_test.rs  imported_share_memory_test.rs  migration_sweep_memory_test.rs  multinode_test.rs  network_failure_test.rs  nonce_pool_signing_memory_test.rs  oprf_memory_test.rs  oprf_unlock_failover_memory_test.rs  property_tests.rs  psbt_memory_test.rs  signing_memory_test.rs  tls_cert_pin_test.rs  tls_cert_pin_verification.rs
keep-mobile/: Cargo.toml  build.rs  uniffi.toml
keep-mobile/src/: audit.rs  dkg.rs  error.rs  keep_mobile.udl  lib.rs  network.rs  nip46.rs  nip46_ratelimit.rs  nip55.rs  nip55_audit.rs  nip55_caller.rs  nip55_decision.rs  nip55_policy.rs  nip55_ratelimit.rs  persistence.rs  policy.rs  psbt.rs  signing_policy.rs  storage.rs  storage_integrity.rs  types.rs  velocity.rs
keep-nip46/: Cargo.toml
keep-nip46/src/: audit.rs  bunker.rs  client.rs  error.rs  frost_signer.rs  handler.rs  lib.rs  local_server.rs  permissions.rs  rate_limit.rs  server.rs  types.rs
keep-nip46/tests/: bunker_integration.rs  client_integration.rs  get_device_info.rs
keep-web/: Cargo.toml  README.md
keep-web/src/: api.rs  auth.rs  bunker.rs  main.rs  state.rs  state_replication.rs  ws.rs
keep-web/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
keep-web/ui/src/: App.svelte  app.css
keep-web/ui/src/lib/: api.ts
(+52 files in other folders)
