[package]
name = "keep"
version = "0.1.0"
edition = "2021"
description = "Sovereign key management for Nostr and Bitcoin"
license = "AGPL-3.0-or-later"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake2 = "0.10"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
rand = "0.8"

zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
subtle = "2.5"

heed = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

bech32 = "0.11"
hex = "0.4"
bitflags = "2.4"
urlencoding = "2.1"
url = "2.5"
ctrlc = "3.4"
ratatui = "0.29"
crossterm = "0.28"

nostr-sdk = { version = "0.35", features = ["nip46"] }
tokio = { version = "1", features = ["full", "signal"] }

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
