[workspace]
resolver = "2"
members = [
    "keep-core",
    "keep-cli",
    "keep-enclave",
    "keep-enclave/host",
    "keep-bitcoin",
    "keep-agent",
    "keep-frost-net",
    "keep-nip46",
    "keep-mobile",
]
exclude = [
    "keep-enclave/enclave",
    "keep-agent-py",
    "keep-agent-ts",
    "fuzz",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/privkeyio/keep"

[workspace.dependencies]
keep-core = { path = "keep-core" }
keep-bitcoin = { path = "keep-bitcoin" }
keep-enclave-host = { path = "keep-enclave/host" }
keep-agent = { path = "keep-agent" }
keep-frost-net = { path = "keep-frost-net" }
keep-nip46 = { path = "keep-nip46" }

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake2 = "0.10"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
rand = "0.9"
frost-secp256k1-tr = "2.2"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }

# Secure memory
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
subtle = "2.5"

# Nostr
nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }

# Async
tokio = { version = "1", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bech32 = "0.11"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# URL handling
urlencoding = "2.1"
url = "2.5"

# Storage
redb = "2.6.3"

# MSRV 1.85 compatibility pins (edition2024 crates)
base64ct = ">=1.0, <1.8"  # 1.8+ uses edition2024
blake3 = ">=1.0, <1.8.3"  # 1.8.3+ uses edition2024
constant_time_eq = ">=0.1, <0.4"  # 0.4+ uses edition2024
darling = ">=0.13, <0.23"  # 0.23+ requires MSRV 1.88
instability = ">=0.3, <0.3.11"  # 0.3.11+ requires MSRV 1.88

# Misc
bitflags = "2.4"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tempfile = "3.10"
