[package]
name = "keep-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
keep-core = { path = "../keep-core" }
keep-frost-net = { path = "../keep-frost-net", default-features = false, features = [] }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_nsec"
path = "fuzz_targets/fuzz_nsec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_npub"
path = "fuzz_targets/fuzz_npub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vault_header"
path = "fuzz_targets/fuzz_vault_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_frost_messages"
path = "fuzz_targets/fuzz_frost_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encrypted_data"
path = "fuzz_targets/fuzz_encrypted_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_share_export"
path = "fuzz_targets/fuzz_share_export.rs"
test = false
doc = false
bench = false
