[package]
name = "keep-agent-py"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Python bindings for Keep Agent SDK"

[lib]
name = "keep_agent"
crate-type = ["cdylib"]

[dependencies]
keep-agent = { path = "../keep-agent", features = ["mcp"] }
keep-core = { path = "../keep-core" }
keep-bitcoin = { path = "../keep-bitcoin" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0"
hex = "0.4"
nostr-sdk = { version = "0.44", features = ["nip44"] }
k256 = { version = "0.13", features = ["schnorr"] }
