[package]
name = "keep-agent-ts"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "TypeScript/Node.js bindings for Keep Agent SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
keep-agent = { path = "../keep-agent", features = ["mcp"] }
keep-core = { path = "../keep-core" }
keep-bitcoin = { path = "../keep-bitcoin" }
napi = { version = "3.6", features = ["async", "serde-json"] }
napi-derive = "3.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0"
nostr-sdk = "0.44"
k256 = { version = "0.13", features = ["schnorr"] }
hex = "0.4"

[build-dependencies]
napi-build = "2"
