[package]
name = "keep-bitcoin"
version = "0.3.0"
edition = "2021"
rust-version = "1.89"
description = "Bitcoin PSBT and Taproot support for Keep"
license = "MIT"

[dependencies]
keep-core = { path = "../keep-core" }

bitcoin = { version = "0.32", features = ["serde", "base64"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

getrandom = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
tracing = "0.1"
miniscript = "=12.3.5"

[dev-dependencies]
tempfile = "3.27"
