[package]
name = "keep-bitcoin"
version.workspace = true
edition = "2021"
rust-version = "1.89"
description = "Bitcoin PSBT and Taproot support for Keep"
license = "MIT"

[dependencies]
keep-core = { path = "../keep-core" }

bitcoin = { version = "0.32", features = ["serde", "base64"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

getrandom = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
tracing = "0.1"
miniscript = "=13.1.0"

# Optional HTTP client for the built-in Esplora chain view (#502). Gated
# behind a feature so downstream crates that only need the ChainView trait
# do not pull reqwest + rustls + tokio into their build graph.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
url = { version = "2", optional = true }

[features]
default = []
# Ships the built-in EsploraChainView HTTP client; opt in from binary crates.
esplora-chain-view = ["reqwest", "url"]

[dev-dependencies]
tempfile = "3.27"
