[package]
name = "keep-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Keep - sovereign key management for Nostr and Bitcoin"
license = "AGPL-3.0-or-later"

[[bin]]
name = "keep"
path = "src/main.rs"

[dependencies]
keep-core = { path = "../keep-core" }
keep-bitcoin = { path = "../keep-bitcoin" }
keep-enclave-host = { path = "../keep-enclave/host" }
keep-agent = { path = "../keep-agent", features = ["mcp"] }
keep-frost-net = { path = "../keep-frost-net" }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Nostr
nostr-sdk = { workspace = true }

# Async
tokio = { version = "1", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# URL handling
urlencoding = "2.1"
url = "2.5"

# FROST / Crypto
frost-secp256k1-tr = "2.2.0"
sha2 = "0.10.9"
rand = "0.9"

# Misc
bitflags = { version = "2.4", features = ["serde"] }
ctrlc = { version = "3.4", features = ["termination"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
