[package]
name = "keep-cli"
version = "0.1.4"
edition = "2021"
description = "CLI for Keep - sovereign key management for Nostr and Bitcoin"
license = "AGPL-3.0-or-later"

[[bin]]
name = "keep"
path = "src/main.rs"

[dependencies]
keep-core = { path = "../keep-core" }
keep-bitcoin = { path = "../keep-bitcoin" }
keep-enclave-host = { path = "../keep-enclave/host" }
keep-agent = { path = "../keep-agent", features = ["mcp"] }
keep-frost-net = { path = "../keep-frost-net" }
keep-nip46 = { path = "../keep-nip46" }

clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

ratatui = "0.29"
crossterm = "0.28"

nostr-sdk = { workspace = true }

tokio = { version = "1", features = ["full", "signal"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"

urlencoding = "2.1"
url = "2.5"

frost-secp256k1-tr = "2.2.0"
sha2 = "0.10.9"
rand = "0.9"

serialport = "4.8.1"

fs2 = "0.4"

shellexpand = "3.1"

bitflags = { version = "2.4", features = ["serde"] }
ctrlc = { version = "3.4", features = ["termination"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

[features]
default = []
testing = ["keep-core/testing"]
warden = ["dep:reqwest", "dep:uuid"]

[dev-dependencies]
tempfile = "3.10"
sha2 = "0.10"
hex = "0.4"
