[package]
name = "keep-core"
version = "0.1.3"
edition = "2021"
rust-version = "1.83"
description = "Core library for Keep - sovereign key management for Nostr and Bitcoin"
license = "AGPL-3.0-or-later"

[dependencies]
argon2 = "0.5"
base64ct.workspace = true  # Pin for MSRV compatibility
chacha20poly1305 = "0.10"
blake2 = "0.10"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
rand = "0.9"
frost-secp256k1-tr = "2.2.0"

zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
memsec = "0.7"
subtle = "2.5"
memsecurity = { version = "3", features = ["encryption", "symm_asymm"] }
redb.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bech32 = "0.11"
hex = "0.4"
thiserror = "1.0"
fs2 = "0.4"
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
