[package]
name = "keep-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Core library for Keep - sovereign key management for Nostr and Bitcoin"
license = "AGPL-3.0-or-later"

[features]
default = []
testing = []
allow-ws = []
# WARNING: allow-internal disables SSRF internal-host checks. MUST NOT be enabled in production.
allow-internal = []

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
chacha20 = "0.9"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
blake2 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
rand = "0.10"
frost-secp256k1-tr = "2.2.0"

scrypt = "0.11"
unicode-normalization = "0.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
memsec = "0.7"
subtle = "2.5"
memsecurity = { version = "3", features = ["encryption", "symm_asymm"] }
redb = "3"
redb2 = { package = "redb", version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bech32 = "0.11"
hex = "0.4"
base64 = "0.22"
thiserror = "1.0"
fs2 = "0.4"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
temp-env = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.5"

[[test]]
name = "integration_tests"
required-features = ["testing"]

[[test]]
name = "property_tests"
required-features = ["testing"]

[[bench]]
name = "crypto"
harness = false
required-features = ["testing"]
