[package]
name = "keep-core"
version.workspace = true
edition = "2021"
rust-version = "1.89"
description = "Core library for Keep - sovereign key management for Nostr and Bitcoin"
license = "MIT"

[features]
default = []
testing = []
allow-ws = []
# WARNING: allow-internal disables SSRF internal-host checks. MUST NOT be enabled in production.
allow-internal = []
ed25519 = ["dep:frost-ed25519"]
# Threshold-OPRF unlock primitive (frost-gate v2 / KeepNode). Opt-in; pulls voprf.
oprf = ["dep:voprf", "dep:sha2_010", "dep:rand_core_06", "dep:vsss-rs"]

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
chacha20 = { version = "0.10", features = ["xchacha"] }
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
blake2 = "0.10"
sha2 = "0.11"
hkdf = "0.13"
hmac = "0.13"
k256 = { version = "0.13", features = ["schnorr", "ecdh", "hash2curve"] }
rand = "0.10"
frost-secp256k1-tr = "3.0.0"
frost-ed25519 = { version = "3.0.0", optional = true }
# RFC 9497 OPRF reference implementation (MIT). secp256k1 bound via a local CipherSuite.
# voprf rides the elliptic-curve 0.13 / digest 0.10 ecosystem, so the OPRF hash must be the
# matching sha2 0.10 (coexists with keep-core's sha2 0.11 via Cargo multi-versioning).
voprf = { version = "0.5", optional = true }
sha2_010 = { package = "sha2", version = "0.10", optional = true }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"], optional = true }
# Vetted Shamir/VSS over secp256k1 (Apache-2.0 OR MIT). Used for the t-of-n key split and the
# in-exponent Lagrange combination of partial evaluations (combine_shares_group).
vsss-rs = { version = "5", optional = true }

bip39 = { workspace = true }
bitcoin = { workspace = true }
scrypt = "0.12"
unicode-normalization = "0.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
memsec = "0.7"
subtle = "2.5"
memsecurity = { version = "3", features = ["encryption", "symm_asymm"] }
redb = "4"
redb2 = { package = "redb", version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bech32 = "0.12"
hex = "0.4"
base64 = "0.22"
thiserror = "2.0"
fs2 = "0.4"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27"
temp-env = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"

[[test]]
name = "integration_tests"
required-features = ["testing"]

[[test]]
name = "property_tests"
required-features = ["testing"]

[[bench]]
name = "crypto"
harness = false
required-features = ["testing"]
