[package]
name = "keep-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keep-desktop"
path = "src/main.rs"

[dependencies]
keep-core = { path = "../keep-core" }
keep-frost-net = { path = "../keep-frost-net" }
keep-nip46 = { path = "../keep-nip46" }
iced = { version = "0.14.0", features = ["tokio", "qr_code", "lazy", "tiny-skia"] }
nostr-sdk = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
