[package]
name = "keep-frost-net"
version = "0.1.2"
edition = "2021"
rust-version = "1.81"
description = "FROST coordination protocol over nostr for Keep"
license = "AGPL-3.0-or-later"

[dependencies]
keep-core = { path = "../keep-core" }

nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }
frost-secp256k1-tr = "2.2"
rand_09 = { package = "rand", version = "0.9" }
k256 = { version = "0.13.4", features = ["schnorr"] }

tokio = { version = "1", features = ["full", "sync"] }
parking_lot = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"

thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10.9"
zeroize = "1.8"
hmac = "0.12"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
nostr-relay-builder = "0.44"
chrono = "0.4"
