[package]
name = "keep-frost-net"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "FROST coordination protocol over nostr for Keep"
license = "AGPL-3.0-or-later"

[features]
default = ["nitro-attestation"]
nitro-attestation = ["dep:keep-enclave-host"]
testing = ["keep-core/allow-ws"]

[dependencies]
keep-bitcoin = { path = "../keep-bitcoin" }
keep-core = { path = "../keep-core" }
keep-enclave-host = { path = "../keep-enclave/host", optional = true }

nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }
frost-secp256k1-tr = "2.2"
rand = "0.10"
k256 = { version = "0.13.4", features = ["schnorr"] }

tokio = { version = "1", features = ["full", "sync"] }
parking_lot = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
rustls = "0.23"
rustls-pki-types = "1"

thiserror = "1.0"
tokio-rustls = "0.26"
tracing = "0.1"
fs2 = "0.4"
sha2 = "0.10.9"
url = "2.5"
webpki-roots = "0.26"
zeroize = "1.8"
hmac = "0.12"
subtle = "2.5"

[dev-dependencies]
bitcoin = "0.32"
tempfile = "3.10"
tokio-test = "0.4"
nostr-relay-builder = "0.44"
chrono = "0.4"
proptest = "1.5"
keep-core = { path = "../keep-core", features = ["allow-ws", "allow-internal"] }
