[package]
name = "keep-frost-net"
version.workspace = true
edition = "2021"
rust-version = "1.89"
description = "FROST coordination protocol over nostr for Keep"
license = "MIT"

[features]
default = ["nitro-attestation"]
nitro-attestation = ["dep:keep-enclave-host"]
testing = ["keep-core/allow-ws"]

[dependencies]
keep-bitcoin = { path = "../keep-bitcoin" }
keep-core = { path = "../keep-core", features = ["oprf"] }
keep-enclave-host = { path = "../keep-enclave/host", optional = true }

nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }
frost-secp256k1-tr = "3.0"
rand = "0.10"
k256 = { version = "0.13.4", features = ["schnorr"] }
# NIST P-256 ECDSA, for verifying TPM2 quote signatures (the AK is a P-256 key).
# Verifier-side only: pure Rust, no TPM / libtss2 (see tpm_quote.rs).
p256 = { version = "0.13", features = ["ecdsa"] }

tokio = { version = "1", features = ["full", "sync"] }
parking_lot = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
rustls = "0.23"
rustls-pki-types = "1"

redb = "4"
thiserror = "2.0"
tokio-rustls = "0.26"
tracing = "0.1"
fs2 = "0.4"
sha2 = "0.11"
url = "2.5"
webpki-roots = "1.0"
zeroize = "1.8"
hmac = "0.13"
subtle = "2.5"
bitcoin = { version = "0.32", features = ["serde", "base64"] }

[dev-dependencies]
tempfile = "3.27"
tokio-test = "0.4"
nostr-relay-builder = "0.44"
chrono = "0.4"
proptest = "1.11"
keep-core = { path = "../keep-core", features = ["allow-ws", "allow-internal", "oprf"] }

[[test]]
name = "multinode_test"
required-features = ["testing"]
