[package]
name = "keep-mobile"
version = "0.1.4"
edition = "2021"
rust-version = "1.85"
description = "UniFFI bindings for Keep mobile platforms"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
keep-core = { path = "../keep-core" }
keep-frost-net = { path = "../keep-frost-net", default-features = false }
keep-nip46 = { path = "../keep-nip46" }
frost-secp256k1-tr = { version = "2.1", default-features = false }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "time"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
url = "2.5"
zeroize = { workspace = true }
subtle = { workspace = true }
flate2 = "1.1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
