[package]
name = "keep-mobile"
version = "0.1.4"
edition = "2021"
rust-version = "1.88"
description = "UniFFI bindings for Keep mobile platforms"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
keep-core = { path = "../keep-core" }
keep-bitcoin = { path = "../keep-bitcoin" }
keep-frost-net = { path = "../keep-frost-net", default-features = false }
keep-nip46 = { path = "../keep-nip46" }
bitcoin = { version = "0.32", features = ["serde", "base64"] }
frost-secp256k1-tr = { version = "2.1", default-features = false }
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "time"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
k256 = { version = "0.13.4", features = ["schnorr"] }
base64 = "0.22"
url = "2.5"
zeroize = { workspace = true }
subtle = { workspace = true }
flate2 = "1.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1"
nostr-sdk = { version = "0.44", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
