[package]
name = "keep-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Web admin + NIP-46 bunker daemon for Keep (StartOS deployment)"

[dependencies]
keep-core = { path = "../keep-core" }
keep-nip46 = { path = "../keep-nip46" }
keep-frost-net = { path = "../keep-frost-net" }

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["fs", "trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nostr-sdk = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
