[package]
name = "keep-enclave-bin"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "AWS Nitro Enclave binary for Keep"
license = "AGPL-3.0-or-later"

[workspace]

[[bin]]
name = "keep-enclave"
path = "src/main.rs"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["schnorr", "alloc"] }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
signature = "2.2"

frost-secp256k1-tr = { version = "2.2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
ciborium = { version = "0.2", default-features = false }

zeroize = { version = "1.8", features = ["derive"] }
rand_core = { version = "0.6", default-features = false }

thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"
nix = { version = "0.29", features = ["socket"] }
aws-nitro-enclaves-nsm-api = "0.4"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
