[workspace]

[package]
name = "keep-enclave-bin"
version = "0.1.2"
edition = "2021"
rust-version = "1.83"
description = "AWS Nitro Enclave binary for Keep"
license = "AGPL-3.0-or-later"

[[bin]]
name = "keep-enclave"
path = "src/main.rs"

[dependencies]
k256 = { version = "0.13.4", default-features = false, features = ["schnorr", "alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10.3", default-features = false, features = ["alloc", "aes"] }
signature = "2.2"

frost-secp256k1-tr = { version = "2.2", default-features = false, features = ["serialization"] }

bitcoin = { version = "0.32", default-features = false, features = ["std"] }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
ciborium = { version = "0.2", default-features = false }

zeroize = { version = "1.8", features = ["derive"] }
memsec = "0.7"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"
nix = { version = "0.29", features = ["socket"] }
aws-nitro-enclaves-nsm-api = "0.4"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# DANGER: Only enable for testing. Allows plaintext key import bypassing KMS.
allow-plaintext-import = []

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
